@@ -37,6 +37,9 @@ struct ost_thread_local_cache {
 
 struct ost_thread_local_cache *ost_tls(struct ptlrpc_request *r);
 
+#define OSS_DEF_CREATE_THREADS  1UL
+#define OSS_MAX_CREATE_THREADS 16UL
+
 /* Quota stuff */
 extern quota_interface_t *quota_interface;
 
