@@ -134,6 +134,11 @@ Details    : The journal checksum feature adds two new flags i.e
 	     blocks to be written to disk. This behavior is controlled
 	     using JBD2_FEATURE_ASYNC_COMMIT flag.
 
+Severity   : minor
+Bugzilla   : 12446
+Description: OSS needs mutliple precreate threads
+Details    : Add ability to start more than one create thread per OSS.
+
 --------------------------------------------------------------------------------
 
 2007-08-10         Cluster File Systems, Inc. <info@clusterfs.com>
